--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <title>Admin Sistem Informasi Manajemen Karyawan</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- DIV -->
+     <!-- HEADER -->
+       <!-- PROFILE ICON -->
+      <!-- END OF HEADER -->
+
+      <!-- MAIN -->
+       <div class="container">TESTING</div>
+      <!-- END OF MAIN -->
+
+      <!-- SIDEBAR -->
+        <!-- DIV -->
+            <!-- SIDEBAR HEADER -->
+
+              <!-- IMG HEADER -->
+              <!-- HAMBURGER MENU -->
+
+            <!-- END OF SIDEBAR HEADER -->
+
+            <!-- ADMIN PROFILE -->
+
+            <!-- END OF ADMIN PROFILE -->
+
+            <!-- DASHBOARD -->
+
+            <!-- END OF DASHBOARD -->
+
+            <!-- MENU KARYAWAN -->
+
+            <!-- END OF MENU KARYAWAN -->
+
+            <!-- MENU ABSENSI -->
+
+            <!-- END OF MENU ABSENSI -->
+
+            <!-- MENU PENGGAJIAN -->
+
+            <!-- END OF MENU PENGGAJIAN -->
+
+            <!-- MENU LAPORAN -->
+
+            <!-- END OF MENU LAPORAN -->
+
+            <!-- MENU ADMIN -->
+
+            <!-- END OF ADMIN -->
+
+            <!-- LOGOUT -->
+
+            <!-- END OF LOGOUT -->
+        <!-- DIV -->
+      <!-- END OF SIDEBAR -->
+
+    <!-- DIV -->
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
