Commit @ Final App

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- COPYRIGHT. RADEN MUHAMMAD VITO NUGROHO_221011400068_05TPLE001. 2024 -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -13,62 +13,139 @@
       crossorigin="anonymous"
     />
 
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <title>Admin Sistem Informasi Manajemen Karyawan</title>
   </head>
+
   <body>
-    <!-- DIV -->
-     <!-- HEADER -->
-       <!-- PROFILE ICON -->
-      <!-- END OF HEADER -->
+    <!-- Sidebar -->
+    <aside id="sidebar" class="nav flex-column">
+      <a class="nav-link active" href="index.html">
+        <i class="fas fa-tachometer-alt"></i> Dashboard
+      </a>
+      <p class="text-muted mt-3">MENU KARYAWAN</p>
+      <a class="nav-link" href="karyawan.html">
+        <i class="fas fa-users"></i> Karyawan
+      </a>
+      <a class="nav-link" href="jabatan.html">
+        <i class="fas fa-briefcase"></i> Jabatan
+      </a>
+      <a class="nav-link" href="divisi.html">
+        <i class="fas fa-building"></i> Divisi
+      </a>
+      <p class="text-muted mt-3">MENU ABSENSI</p>
+      <a class="nav-link" href="absensi.html">
+        <i class="fas fa-calendar-check"></i> Absensi
+      </a>
+      <a class="nav-link" href="izin.html">
+        <i class="fas fa-calendar-times"></i> Izin
+      </a>
+      <a class="nav-link" href="lembur.html">
+        <i class="fas fa-clock"></i> Lembur
+      </a>
+    </aside>
 
-      <!-- MAIN -->
-       <div class="container">TESTING</div>
-      <!-- END OF MAIN -->
+    <!-- Main Content -->
+    <div class="main bg-light">
+      <!-- Navbar -->
+      <div class="navbar bg-primary p-2 shadow-lg">
+        <div class="container-fluid">
+          <div class="d-flex justify-content-end align-items-center w-100">
+            <div class="name p-3">
+              <p class="text-white mb-0 fw-bold">
+                Hi, Raden Muhammad Vito Nugroho
+              </p>
+            </div>
+            <div class="profile">
+              <img
+                src="assets/img/admin.png"
+                width="45"
+                alt="Profile Picture"
+                class="rounded-circle"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <!-- SIDEBAR -->
-        <!-- DIV -->
-            <!-- SIDEBAR HEADER -->
+      <!-- Header Section -->
+      <div class="main-container mt-5">
+        <div class="header bg-info container-fluid d-flex justify-content-left">
+          <div class="p-5">
+            <h1 class="text-white">Sistem Informasi Manajemen Karyawan</h1>
+            <p class="text-white">Admin Dashboard</p>
+          </div>
+        </div>
+      </div>
 
-              <!-- IMG HEADER -->
-              <!-- HAMBURGER MENU -->
+      <!-- Card Section -->
+      <div class="container-fluid mt-5">
+        <div class="card-box d-flex justify-content-around align-items-center">
+          <!-- Card Item 1 -->
+          <div
+            class="card-item d-flex align-items-center card-container bg-white rounded-3 shadow-sm p-4"
+          >
+            <div class="p-2">
+              <i class="fa-solid fa-filter-circle-dollar text-primary"></i>
+            </div>
+            <div class="p-5">
+              <p class="text-secondary">Data <br />Pegawai</p>
+              <p class="fw-bold">13</p>
+            </div>
+          </div>
 
-            <!-- END OF SIDEBAR HEADER -->
+          <!-- Card Item 2 -->
+          <div
+            class="card-item d-flex align-items-center card-container bg-white rounded-3 shadow-sm p-5"
+          >
+            <div class="p-2">
+              <i class="fa-solid fa-face-smile text-success"></i>
+            </div>
+            <div class="p-4">
+              <p class="text-secondary">Absensi Hari Ini <br />11 May 2023</p>
+              <p class="fw-bold">0</p>
+            </div>
+          </div>
 
-            <!-- ADMIN PROFILE -->
+          <!-- Card Item 3 -->
+          <div
+            class="card-item d-flex align-items-center card-container bg-white rounded-3 shadow-sm p-5"
+          >
+            <div class="p-2">
+              <i class="fa-solid fa-bomb text-danger"></i>
+            </div>
+            <div class="p-4">
+              <p class="text-secondary">Izin Menunggu <br />Konfirmasi</p>
+              <p class="fw-bold">2</p>
+            </div>
+          </div>
 
-            <!-- END OF ADMIN PROFILE -->
-
-            <!-- DASHBOARD -->
-
-            <!-- END OF DASHBOARD -->
-
-            <!-- MENU KARYAWAN -->
-
-            <!-- END OF MENU KARYAWAN -->
-
-            <!-- MENU ABSENSI -->
-
-            <!-- END OF MENU ABSENSI -->
-
-            <!-- MENU PENGGAJIAN -->
-
-            <!-- END OF MENU PENGGAJIAN -->
-
-            <!-- MENU LAPORAN -->
-
-            <!-- END OF MENU LAPORAN -->
-
-            <!-- MENU ADMIN -->
-
-            <!-- END OF ADMIN -->
-
-            <!-- LOGOUT -->
-
-            <!-- END OF LOGOUT -->
-        <!-- DIV -->
-      <!-- END OF SIDEBAR -->
-
-    <!-- DIV -->
+          <!-- Card Item 4 -->
+          <div
+            class="card-item d-flex align-items-center card-container bg-white rounded-3 shadow-sm p-5"
+          >
+            <div class="p-2">
+              <i class="fa-solid fa-hippo text-warning"></i>
+            </div>
+            <div class="p-4">
+              <p class="text-secondary">Lembur Menunggu <br />Konfirmasi</p>
+              <p class="fw-bold">1</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script
@@ -76,5 +153,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
